--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <div class="hero-card" aria-hidden="false">
-          <img src="images/profile2.jpg" alt="Profile photo of Nafisah Amani">
+          <img src="images/profile4.png" alt="Profile photo of Nafisah Amani">
           <p class="small muted">NAFISAH AMANI BINTI SHAHRIN SHAH</p>
           <p class="small muted">fromnafisah@gmail.com</p>
         </div>
@@ -183,3 +183,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
