--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section id="contact" class="section">
       <div class="container">
         <h2 class="section-title">Contact</h2>
-        <p class="section-desc">Send a message — this is a front-end form (no backend). Replace the email in the mailto link if you prefer.</p>
+        <p class="section-desc">Send a message</p>
 
         <form id="contact-form" novalidate>
           <div class="form-grid">
@@ -183,4 +183,5 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
