--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <article class="project-card" tabindex="0">
             <img src="images/project3.jpg" alt="Screenshot of Car Rental">
             <div class="project-body">
-              <h3>Project Three — Car Rental Database Management</h3>
+              <h3>Project Three — Car Rental</h3>
               <p>Design and implementation of normalized database schema, queries using XAMPP and MySQL in developing a car rental website.</p>
               <div class="project-actions">
                 <button class="btn small" data-project="3">View</button>
@@ -121,7 +121,7 @@
             <div class="card">
               <h4>Contact</h4>
               <p><a href="mailto:fromnafisah@gmail.com">fromnafisah@gmail.com</a></p>
-              <p>Location: Malaysia (example)</p>
+              <p>Location: Kuala Lumpur, Malaysia</p>
               <p>Availability: Open to opportunities</p>
             </div>
           </aside>
@@ -154,7 +154,7 @@
           </div>
 
           <div class="form-actions">
-            <button type="submit" class="btn">Send (Frontend only)</button>
+            <button type="submit" class="btn">Send</button>
             <a class="btn btn-outline" href="mailto:fromnafisah@gmail.com">Or email directly</a>
           </div>
 
@@ -183,5 +183,6 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
